--- a/purv/frontend/package.json
+++ b/purv/frontend/package.json
@@ -11,12 +11,14 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.6.1",
+    "@tailwindcss/vite": "^4.1.1",
     "axios": "^1.8.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
     "react-router": "^7.4.1",
-    "react-router-dom": "^7.4.1"
+    "react-router-dom": "^7.4.1",
+    "tailwindcss": "^4.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
